[package]
name = "Boomie"
version = "0.1.2"
edition = "2024"
authors = ["Servus Altissimi"]
description = "Real-time music synthesizer and composition engine written with dynamic playback control and advanced audio effects. Designed for on the fly compositing."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Servus-Altissimi/Boomie"
keywords = ["audio", "music", "synthesizer"]
categories = ["multimedia::audio"]
exclude = [
    "target/*",
    "temp",
    "song.bmi",
    "melody.mel",
    ".gitignore",
]


[dependencies]
cpal = "0.16.0"
fastrand = "2.3.0"
hound = "3.5.1"

[lib]
name = "boomie"
path = "src/lib.rs"
