[package]
name = "Boomie"
version = "0.1.3"
edition = "2024"
authors = ["Servus Altissimi"]
description = "Real-time music synthesizer and composition engine written with dynamic playback control and advanced audio effects. Designed for on the fly compositing."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Servus-Altissimi/Boomie"
keywords = ["audio", "music", "synthesizer"]
categories = ["multimedia::audio"]
exclude = [
    "target/*",
    "temp",
    "song.bmi",
    "melody.mel",
    ".gitignore",
]

[features]
default = []
gpu = ["dep:wgpu", "dep:bytemuck", "dep:futures-channel"]

[dependencies]
cpal     = "0.16"
fastrand = "2.3.0"
hound    = "3.5.1"
wgpu   	 = { version = "28", optional = true }
bytemuck = { version = "1",  features = ["derive"], optional = true }
futures-channel = { version = "0.3", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[lib]
name = "boomie"
path = "src/lib.rs"
